# fastApiBase

./: CHANGELOG.md  Jenkinsfile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
docker/: build_dockerfile  python_dockerfile
src/: application.py  settings.py  version.py
src/faster/: __init__.py  apps.py  events.py  middlewares.py
src/faster/routers/: __init__.py
src/faster/routers/resource/: models.py  routers.py  schemas.py  validators.py
src/faster/routers/users/: models.py  routers.py  schemas.py
src/my_tools/: password_tool.py  singleton_tools.py
src/my_tools/fastapi_tools/: decorators.py  factory.py  viewsets.py
src/my_tools/kafka_tools/: callbacks.py  clients.py
src/my_tools/mqtt_tools/emq/: emq_connection.py
src/my_tools/mqtt_tools/kafka/: KafkaClient.py
src/my_tools/redis_tools/: clients.py
src/my_tools/schedule_tasks/: __init__.py  scheduleUtils.py
src/my_tools/tortoise_tools/: fields.py  validators.py
